--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .row
+    .small-12.columns
+      h1= title
+      // p Welcome to #{title}
+
+      p For all your roomie needs
+
+      .btn-wrap
+        a(href="" class="button") Sign Up
+        a(href="" class="button") Log In
