--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,5 @@
+@import url("http://fonts.googleapis.com/css?family=Cinzel");
+@import url("http://fonts.googleapis.com/css?family=Cinzel+Decorative");
 /* line 260, ../bower_components/foundation/scss/foundation/components/_global.scss */
 meta.foundation-version {
   font-family: "/5.2.2/";
@@ -7789,4 +7791,62 @@ th.hide-for-touch {
 /* line 343, ../bower_components/foundation/scss/foundation/components/_visibility.scss */
 .touch th.show-for-touch {
   display: table-cell !important;
+}
+
+/* line 43, ../scss/app.scss */
+body {
+  background-color: #fcbd00;
+  font-size: 14px;
+  color: #333;
+}
+
+/* line 49, ../scss/app.scss */
+.logo {
+  font-family: 'Cinzel', serif;
+  font-size: 48px;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+/* line 57, ../scss/app.scss */
+.hash {
+  color: #555;
+  margin-left: -72px;
+}
+
+/* line 62, ../scss/app.scss */
+.out {
+  color: #333;
+  margin: -20px -103px 0px 0px;
+}
+
+/* line 67, ../scss/app.scss */
+form {
+  background-color: #eee;
+  border-radius: 10px;
+  border: solid 0px #f7f7f7;
+  padding: 10px 15px;
+}
+/* line 74, ../scss/app.scss */
+form label {
+  font-size: 18px;
+}
+/* line 78, ../scss/app.scss */
+form .button, form .button:hover {
+  background: #FFBD15 !important;
+  border-color: #FFBD15 !important;
+  color: #494848 !important;
+  font-weight: 700 !important;
+}
+
+/* line 87, ../scss/app.scss */
+.signin {
+  margin-top: 20px;
+  margin-right: 10px;
+}
+/* line 91, ../scss/app.scss */
+.signin a, .signin a:hover {
+  color: #333;
+  text-decoration: underline;
 }
