--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -39,3 +39,68 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+
+body {
+  background-color: #fcbd00;
+  font-size: 14px;
+  color: #333;
+}
+
+.logo {
+  font-family: 'Cinzel', serif;
+  font-size: 48px;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.hash {
+  color: #555;
+  margin-left: -72px;
+}
+
+.out {
+  color: #333;
+  margin: -20px -103px 0px 0px;
+}
+
+form {
+
+  background-color: #eee;
+  border-radius: 10px;
+  border: solid 0px #f7f7f7;
+  padding: 10px 15px;
+
+  label {
+    font-size:  18px;
+  }
+
+  .button, .button:hover {
+    background: #FFBD15 !important;
+    border-color: #FFBD15 !important;
+    color: #494848 !important;
+    font-weight: 700 !important;
+  }
+
+}
+
+.signin{
+  margin-top: 20px;
+  margin-right: 10px;
+
+  a, a:hover {
+    color: #333;
+    text-decoration: underline
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
