--- a/views/signup.jade
+++ b/views/signup.jade
@@ -3,3 +3,27 @@ extends layout
 block content
   .row
     .small-12.columns
+      form
+        .row
+          .small-12.columns
+            input(type='text' name='firstName' placeholder="First Name")
+        .row
+          .small-12.columns
+            input(type='text' name='lastName' placeholder="Last Name")
+        .row
+          .small-12.columns
+            input(type='text' name='email' placeholder="Email")
+        .row
+          .small-12.columns
+            input(type='text' name='username' placeholder="Username")
+        .row
+          .small-12.columns
+            input(type='text' name='password' placeholder="Password")
+
+        .row
+            .small-12.columns.text-center
+              a(href="" class="button tiny radius" type="submit") SIGN UP
+
+
+
+
