--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  .row
+    .row
     .small-12.columns
       form
         .row
@@ -22,7 +22,7 @@ block content
 
         .row
             .small-12.columns.text-center
-              a(href="" class="button tiny radius" type="submit") SIGN UP
+              a(href="/home" class="button tiny radius" type="submit") SIGN UP
 
 
 
