--- a/public/layout.jade
+++ b/public/layout.jade
@@ -4,4 +4,11 @@ html
     title= title
     link(rel='stylesheet', href='/css/app.css')
   body
+
+    .row
+      .small-12.columns
+        .logo
+          .hash Hash
+          .out Out
+
     block content
