--- a/views/create.jade
+++ b/views/create.jade
@@ -1,13 +1,15 @@
 extends layout
 
-//
 block content
   .row
     .small-12.columns
-      form
+
+
+
+      //form
         .row
           .small-6.columns
-
+            stuff
           .small-6.columns
 
         .row
