--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,6 @@
 extends layout
 
 block content
-
-
-
   .row
     .small-12.columns
       form
@@ -20,10 +17,10 @@ block content
 
         .row
           .small-12.columns.text-center
-            a(href="" class="button tiny radius" type="submit") LOG IN
+            a(href="/home" class="button tiny radius" type="submit") LOG IN
 
       .row
         small-12.columns.text-right
           .signin
-            a(href="") sign up
+            a(href='#') sign up
 
