--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7828,11 +7828,11 @@ form {
   border: solid 0px #f7f7f7;
   padding: 10px 15px;
 }
-/* line 74, ../scss/app.scss */
+/* line 75, ../scss/app.scss */
 form label {
   font-size: 18px;
 }
-/* line 78, ../scss/app.scss */
+/* line 79, ../scss/app.scss */
 form .button, form .button:hover {
   background: #FFBD15 !important;
   border-color: #FFBD15 !important;
@@ -7840,12 +7840,17 @@ form .button, form .button:hover {
   font-weight: 700 !important;
 }
 
-/* line 87, ../scss/app.scss */
+/* line 88, ../scss/app.scss */
+.form {
+  padding-top: 10px;
+}
+
+/* line 92, ../scss/app.scss */
 .signin {
   margin-top: 20px;
   margin-right: 10px;
 }
-/* line 91, ../scss/app.scss */
+/* line 96, ../scss/app.scss */
 .signin a, .signin a:hover {
   color: #333;
   text-decoration: underline;
