--- a/public/index.jade
+++ b/public/index.jade
@@ -25,5 +25,5 @@ block content
       .row
         small-12.columns.text-right
           .signin
-            a(href="") sign up
+            a(href="/signup") sign up
 
