--- a/public/signup.jade
+++ b/public/signup.jade
@@ -22,8 +22,4 @@ block content
 
         .row
             .small-12.columns.text-center
-              a(href="" class="button tiny radius" type="submit") SIGN UP
-
-
-
-
+              a(href="/" class="button tiny radius" type="submit") SIGN UP
