added unique names

--- a/public/event.jade
+++ b/public/event.jade
@@ -9,19 +9,19 @@ block content
             input(type='text' name='password' placeholder="BILL")
 
           .small-12.columns
-            input(type='text' name='password' placeholder="OWNER")
+            input(type='text' name='owner' placeholder="OWNER")
 
           .small-12.columns
-            input(type='text' name='password' placeholder="DUE DATE")
+            input(type='text' name='dueDate' placeholder="DUE DATE")
 
           .small-12.columns
-            input(type='text' name='password' placeholder="TOTAL AMOUNT")
+            input(type='text' name='amountTotal' placeholder="TOTAL AMOUNT")
 
           .small-7.columns
-            input(type='text' name='password' placeholder="PERSON")
+            input(type='text' name='person' placeholder="PERSON")
 
           .small-5.columns
-            input(type='text' name='password' placeholder="AMOUNT DUE")
+            input(type='text' name='amountDue' placeholder="AMOUNT DUE")
 
         .row
           .small-12.columns.text-center
