--- a/public/create.jade
+++ b/public/create.jade
@@ -1,16 +1,28 @@
 extends layout
 
-//
 block content
   .row
     .small-12.columns
       form
+        .row.form
+          .small-12.columns
+            input(type='text' name='password' placeholder="BILL")
+
+          .small-12.columns
+            input(type='text' name='owner' placeholder="OWNER")
+
+          .small-12.columns
+            input(type='text' name='dueDate' placeholder="DUE DATE")
+
+          .small-12.columns
+            input(type='text' name='amountTotal' placeholder="TOTAL AMOUNT")
+
+          .small-7.columns
+            input(type='text' name='person' placeholder="PERSON")
+
+          .small-5.columns
+            input(type='text' name='amountDue' placeholder="AMOUNT DUE")
+
         .row
-          .small-6.columns
-
-          .small-6.columns
-
-        .row
-          .small-6.columns
-
-          .small-6.columns
+          .small-12.columns.text-center
+            a(href="" class="button tiny radius" type="submit") CREAT
