--- a/public/create.jade
+++ b/public/create.jade
@@ -25,4 +25,4 @@ block content
 
         .row
           .small-12.columns.text-center
-            a(href="" class="button tiny radius" type="submit") CREAT
+            a(href="/home" class="button tiny radius" type="submit") CREATE
