--- a/public/home.jade
+++ b/public/home.jade
@@ -4,5 +4,9 @@ block content
   .row
     .small-12.columns
       .row
-        .small-4.columns
-          Create New Event
+        .small-6.columns
+          label.new Create New Event
+        .small-6.columns
+          a(href="/create" class="button tiny radius right" type="submit") CREATE
+
+
