--- a/public/create.jade
+++ b/public/create.jade
@@ -26,3 +26,9 @@ block content
         .row
           .small-12.columns.text-center
             a(href="/home" class="button tiny radius" type="submit") CREATE
+
+
+  .row
+    small-12.columns.text-right
+      .signin
+        a(href="/") sign out
