--- a/public/home.jade
+++ b/public/home.jade
@@ -10,3 +10,7 @@ block content
           a(href="/create" class="button tiny radius right" type="submit") CREATE
 
 
+  .row
+    small-12.columns.text-right
+      .signin
+        a(href="/") sign out
