--- a/public/index.jade
+++ b/public/index.jade
@@ -20,7 +20,7 @@ block content
 
         .row
           .small-12.columns.text-center
-            a(href="" class="button tiny radius" type="submit") LOG IN
+            a(href="/home" class="button tiny radius" type="submit") LOG IN
 
       .row
         small-12.columns.text-right
