--- a/public/home.jade
+++ b/public/home.jade
@@ -9,6 +9,80 @@ block content
         .small-6.columns
           a(href="/create" class="button tiny radius right" type="submit") CREATE
 
+  .row
+    .small-12.columns.block.event1
+      .row
+        .small-5.columns
+          label.myevent The Bill:
+        .small-5.columns.text-right
+          .event.bill   RENT
+      .row
+        .small-5.columns
+          label.myevent Owner:
+        .small-5.columns.text-right
+          .event.owner Jonathan Kendall
+
+      .row
+        .small-5.columns
+          label.myevent Bill due on:
+        .small-5.columns.text-right
+          .event.dueDate 5/15/14
+
+      .row
+        .small-5.columns
+          label.myevent Total Bill:
+        .small-5.columns.text-right
+          .event.amountTotal $2460.57
+
+      .row
+        .small-5.columns
+          label.myevent Roomie:
+        .small-5.columns.text-right
+          .event.person Alexis Birch
+
+      .row
+        .small-5.columns
+          label.myevent Roomie Pays:
+        .small-5.columns.text-right
+          .event.amountDue $1230.29
+
+  .row
+    .small-12.columns.block.event2
+      .row
+        .small-5.columns
+          label.myevent The Bill:
+        .small-5.columns.text-right
+          .event.bill   PHONE BILL
+      .row
+        .small-5.columns
+          label.myevent Owner:
+        .small-5.columns.text-right
+          .event.owner Aisha Green
+
+      .row
+        .small-5.columns
+          label.myevent Bill due on:
+        .small-5.columns.text-right
+          .event.dueDate 5/11/14
+
+      .row
+        .small-5.columns
+          label.myevent Total Bill:
+        .small-5.columns.text-right
+          .event.amountTotal $55.00
+
+      .row
+        .small-5.columns
+          label.myevent Roomie:
+        .small-5.columns.text-right
+          .event.person Robert James
+
+      .row
+        .small-5.columns
+          label.myevent Roomie Pays:
+        .small-5.columns.text-right
+          .event.amountDue $27.50
+
 
   .row
     small-12.columns.text-right
