--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -105,7 +105,14 @@ form {
   font-weight: 700;
 }
 
+.block {
+  padding-bottom: 25px;
+  font-size: 14px;
 
+  label {
+    font-weight: 700;
+  }
+}
 
 
 
