--- a/public/create.jade
+++ b/public/create.jade
@@ -25,7 +25,7 @@ block content
 
         .row
           .small-12.columns.text-center
-            a(href="/home" class="button tiny radius" type="submit") CREATE
+            a(href="/home2" class="button tiny radius" type="submit") CREATE
 
 
   .row
