--- a/public/home2.jade
+++ b/public/home2.jade
@@ -47,6 +47,44 @@ block content
           .event.amountDue $1230.29
 
   .row
+    .small-12.columns.block.event2
+      .row
+        .small-5.columns
+          label.myevent The Bill:
+        .small-5.columns.text-right
+          .event.bill   PHONE BILL
+      .row
+        .small-5.columns
+          label.myevent Owner:
+        .small-5.columns.text-right
+          .event.owner Aisha Green
+
+      .row
+        .small-5.columns
+          label.myevent Bill due on:
+        .small-5.columns.text-right
+          .event.dueDate 5/11/14
+
+      .row
+        .small-5.columns
+          label.myevent Total Bill:
+        .small-5.columns.text-right
+          .event.amountTotal $55.00
+
+      .row
+        .small-5.columns
+          label.myevent Roomie:
+        .small-5.columns.text-right
+          .event.person Jonathan Kendall
+
+      .row
+        .small-5.columns
+          label.myevent Roomie Pays:
+        .small-5.columns.text-right
+          .event.amountDue $27.50
+
+
+  .row
     small-12.columns.text-right
       .signin
         a(href="/") sign out
